# shade-framework

./: CMakeLists.txt  CMakeLists.txt.user.39f6cfb  CMakeLists.txt~  camera.cpp  camera.h  debug.h  gl_context.cpp  gl_context.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  obj_loader.cpp  obj_loader.h  object.cpp  object.h  point3.cpp  point3.h  point_light.cpp  point_light.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  shader_program.cpp  shader_program.h  sphere.cpp  sphere.h  texture2d.cpp  texture2d.h  utils.cpp  utils.h  vec3.cpp  vec3.h
